@@ -1,6 +1,7 @@
 Version 0.34.0 (2022-02-15)
 - Use backported StrEnum
 - Sort constants to identify HA constants
+- Add new platform siren
 
 Version 0.33.0 (2022-02-14)
 - Make parameter availability more robust
